# streamlit-browser-web3

./: .gitignore  README.md  pyproject.toml
examples/: evm.py  streamlit_app.py
src/streamlit_browser_web3/: __init__.py  provider.py
src/streamlit_browser_web3/frontend/provider/: index.html
