[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-browser-web3"
version = "0.1.1"
description = "Streamlit components and helpers for browser-injected EIP-1193 provider utility."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36"
]
keywords = ["streamlit", "web3", "ethereum", "eip-1193", "metamask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AlephVault/streamlit-browser-web3"
Repository = "https://github.com/AlephVault/streamlit-browser-web3"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"streamlit_browser_web3" = ["frontend/provider/index.html"]
